tests/136_lvalue_errors.err
pirxc compilation failed: exit status 1
Output: tests/136_lvalue_errors.pirx:14:4: cannot apply ++ to constant c
tests/136_lvalue_errors.pirx:15:3: cannot apply -- to constant c
tests/136_lvalue_errors.pirx:16:5: cannot assign value to constant c
tests/136_lvalue_errors.pirx:17:16: invalid assignment target
tests/136_lvalue_errors.pirx:18:15: invalid operand for ++
Error: exit status 1
